# Text-Preprocessing-Toolkit

./: .coverage  .gitignore  README.md  init_setup.sh  pipeline_example.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  test.ipynb  tox.ini
.github/workflows/: ci.yaml  python-publish.yml
cleaned_data/cleaned_categorical_data/: adult_label.csv  bank_label.csv  car_ohe.csv  mushroom_ohe.csv  titanic_label.csv  titanic_ohe.csv  zoo_label.csv
cleaned_data/cleaned_numerical_data/: california_clean.csv  diabetes_clean.csv  heart_clean.csv  housing_clean.csv  mpg_clean.csv  synth_clean.csv  tips_clean.csv  titanic_clean.csv  wine_clean.csv
cleaned_data/cleaned_text_data/: imdb_clean.csv  medical_clean.csv  news_clean.csv  sms_clean.csv  support_clean.csv  yelp_clean.csv
data/categorical_data/: adult_raw.csv  bank_raw.csv  car_raw.csv  mushroom_raw.csv  synth_cat_raw.csv  titanic_raw.csv  wine_raw.csv  zoo_raw.csv
data/numerical_data/: california_raw.csv  diabetes_raw.csv  heart_raw.csv  housing_raw.csv  mpg_raw.csv  synth_raw.csv  titanic_raw.csv  wine_raw.csv
data/text_data/: medical_raw.csv  news_raw.csv  sms_raw.csv  support_raw.csv  yelp_raw.csv
encoders/label/: class.pkl  color.pkl  education.pkl  job.pkl  marital.pkl  size.pkl  workclass.pkl
encoders/onehot/: Embarked.pkl  Sex.pkl  buying.pkl  cap-shape.pkl  odor.pkl  safety.pkl
experiments/: CategoricalPreprocessor.ipynb  NumericalPreprocessor.ipynb  TextPreprocessor.ipynb  __init__.py  experiments.ipynb  preprocessing.ipynb  test.ipynb
src/:  __init__.py
src/TPT.egg-info/: PKG-INFO  SOURCES.txt
src/TPTK.egg-info/: PKG-INFO
src/TextPreprocessingToolkit/: __init__.py  categorical_preprocessor.py  cli.py  numerical_preprocessor.py  pipeline.py  test.ipynb  tptk.py  utils.py
src/TextPreprocessingToolkit/encoders/label/: Embarked.pkl
src/TextPreprocessingToolkit/encoders/onehot/: Embarked.pkl
src/TextPreprocessor.egg-info/: PKG-INFO  SOURCES.txt
src/TextPreprocessorTool.egg-info/: PKG-INFO
src/Text_Preprocessing_Toolkit/: TPT.py  Text_Preprocessing_Toolkit.py  __init__.py  main.py  preprocessing.py
src/text_preprocessing_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tptk/: pipeline.py  utils.py
src/tptk/encoders/label/: Pclass.pkl
src/tptk/encoders/onehot/: Pclass.pkl
tests/integration/: integration_testing.py  test_functional.py  test_integration.py
tests/unit/: test_unit.py  unit.py
