[build-system]
requires = ["setuptools>=61.0", "wheel>=0.36.2"]
build-backend = "setuptools.build_meta"

[project]
name = "text-preprocessing-toolkit"
version = "0.0.1"
description = "Automate text preprocessing tasks like tokenization, lemmatization, stop word removal, and normalization."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Gaurav Jaiswal", email = "jaiswalgaurav863@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
]
urls = { 
    "homepage" = "https://github.com/Gaurav-Jaiswal-1/text-preprocessing-toolkit" 
}

dependencies = [
    "nltk>=3.8.1",
    "spacy>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.1.0",
    "mypy>=0.991",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=1.2.0",
]

[project.scripts]
"text-preprocess" = "src.Text_Preprocessing_Toolkit.main:main"  # Corrected path to main.py

[tool.pytest.ini_options]
addopts = "--cov=src.Text_Preprocessing_Toolkit.main --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 88
exclude = [
    ".tox",
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    "*.egg-info",
]

[tool.mypy]
files = ["src/Text_Preprocessing_Toolkit/main.py"]  # Corrected path to main.py
ignore_missing_imports = true
strict = true

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.flake8]
max-line-length = 88
ignore = ["E203", "E266", "E501", "W503"]


[tool.isort]
profile = "black"
line_length = 88
skip = ["docs", "build", "dist", ".tox", "*.egg-info"]
