[tool.poetry]
name = "text-preprocessing-toolkit"
version = "0.0.1"
description = "Automate text preprocessing tasks like tokenization, lemmatization, stop word removal, and normalization."
authors = ["Gaurav Jaiswal <jaiswalgaurav863@gmail.com>"]
license = "MIT"
repository = "https://github.com/Gaurav-Jaiswal-1/text-preprocessing-toolkit"
homepage = "https://github.com/Gaurav-Jaiswal-1/text-preprocessing-toolkit"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
]

packages = [
    {include = "src.Text_Preprocessing_Toolkit"}
]
include = ["docs", "tests", "examples"]

[tool.poetry.dependencies]
python = ">=3.8"
nltk = ">=3.8.1"
spacy = ">=3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
flake8 = ">=6.0.0"
black = ">=23.1.0"
mypy = ">=0.991"
sphinx = ">=7.1.2"
sphinx-rtd-theme = ">=1.2.0"

[tool.pytest.ini_options]
addopts = "--cov=src.Text_Preprocessing_Toolkit.main --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 88
exclude = [
    ".tox",
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    "*.egg-info",
]
ignore = ["E203", "E266", "E501", "W503"]

[tool.mypy]
files = ["src/Text_Preprocessing_Toolkit/main.py"]
ignore_missing_imports = true
strict = true

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88
skip = ["docs", "build", "dist", ".tox", "*.egg-info"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
