[build-system]
requires = ["setuptools>=42.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Specify test directories
testpaths = [
    "tests"
]
# Set verbosity for better test output
addopts = "-v"

[tool.mypy]
# Add source directory for type checking
mypy_path = "src"
# Ignore missing imports from external packages
ignore_missing_imports = true
# Enable strict mode for better type safety
strict = true
# Enable incremental mode for faster checks
incremental = true

[tool.flake8]
# Set max line length for linting
max-line-length = 120
# Specify files/directories to exclude
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist"
]
# Enable complexity threshold
max-complexity = 10
# Show linting statistics
count = true
statistics = true

[tool.black]
# Use Black for code formatting
line-length = 88
target-version = ['py38', 'py39', py310]
skip-string-normalization = false

[tool.isort]
# Configure isort for import sorting
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["pytest", "mypy"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[metadata]
# Metadata for the package
name = "your_package_name"
version = "0.0.1"
description = "Text Preprocessing Toolkit."
author = "Gaurav Jaiswal"
author_email = "jaiswalgaurav863@gmail.com"
license = "MIT"
url = "https://github.com/Gaurav-Jaiswal-1/Text-Preprocessing-Toolkit"
keywords = ["example", "pyproject", "python-package"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[options]
# Python package requirements
packages = find:
python_requires = ">=3.8"
install_requires = [
    "requests",
    "numpy"
]

[options.extras_require]
# Optional dependencies
dev = [
    "pytest",
    "flake8",
    "black",
    "isort",
    "mypy",
    "build"
]

[options.package_data]
# Include data files in the package
* = ["*.txt", "*.rst", "*.md"]

[options.entry_points]
# Command-line entry points
console_scripts =
    your_command = your_package.module:main
