[metadata]
name = Text_Preprocessing_Toolkit
version = 0.0.1
description = Your package description.
long_description = file: README.md
long_description_content_type = text/markdown
author = Gaurav Jaiswal
author_email = jaiswalgaurav863@gmail.com
license = MIT
license_files = LICENSE
url = "https://github.com/Gaurav-Jaiswal-1/Text-Preprocessing-Toolkit"
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
keywords = example, setup.cfg, python-package

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests
    numpy

[options.extras_require]
dev =
    pytest
    flake8
    black
    isort
    mypy
    build

[options.package_data]
* = *.txt, *.rst, *.md

[options.entry_points]
console_scripts =
    your_command = your_package.module:main

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    build,
    dist
max-complexity = 10
count = True
statistics = True

[mypy]
mypy_path = src
ignore_missing_imports = True
strict = True
incremental = True

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = True
known_third_party = requests, numpy, pytest
sections = FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER

[tool:pytest]
testpaths = tests
addopts = -v

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
source = your_package

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    def __str__
    if __name__ == .__main__.:


